@@ -10,6 +10,8 @@ Version 5.1.3 -
     from automatically enlisting in any current transaction    
   - Changed membership schema to allow null values for email.  This allows all the 
     overrides for Membership.CreateUser to work.    
+  - Added 'Respect Binary Flags' connection string option to allow existing applications
+    to select the old behavior of not always respecting the binary flags of a columns.
     
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
@@ -59,6 +61,9 @@ Version 5.0.8
   - Changed behavior of ConnectionString property.  It now only returns the connection
     string given to it.  It will not attempt to track changes to the current
     database when the users uses the ChangeDatabase method. (Bug #29123)
+  - Fixed problem with calling stored procedures in databases that have hyphens
+    in their names.  We were not using backticks to quote the database and sproc name
+    when querying for metadata. (Bug #29526)
     
 Version 5.0.7 5/16/2007
 
